// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniversalLink renders correctly with a taregt blank 1`] = `
<DocumentFragment>
  <a
    class="sui-box emotion-0"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
    to="/"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with an absolute utl 1`] = `
<DocumentFragment>
  <a
    class="sui-box emotion-0"
    href="https://google.com"
    rel="noopener noreferrer"
    target="_blank"
    to="https://google.com"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with defaults 1`] = `
<DocumentFragment>
  <a
    class="sui-box emotion-0"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with href 1`] = `
<DocumentFragment>
  <a
    class="sui-box emotion-0"
    href="/"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with to prop 1`] = `
<DocumentFragment>
  <a
    class="sui-box emotion-0"
    href="/"
    to="/"
  >
    This is a link
  </a>
</DocumentFragment>
`;
